<resources>
    <string name="app_name">CameraApplication</string>
    <string name="Heading">Click on the camera button to start the camera</string>
    <string name="cameraButton">Camera</string>
    <string name="uploadButton">Upload picture</string>
    <string name="textfieldcontains">Write what the picture contains.</string>
    <string name="itemofcontain">Write the number of items that\'s included in the picture.</string>
    <string name="enter_your_info">Contains</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="gotosettings">Go To Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Settings Activity -->
    <string name="settings_heading">Settings Menu</string>
    <string name="ip_text">Enter the IP of the server</string>
    <string name="send_data_text">Save</string>
</resources>