<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_heading"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/ip_of_server_input"
            android:layout_width="240dp"
            android:layout_height="71dp"
            android:layout_marginTop="70sp"
            android:ems="10"
            android:inputType="textShortMessage|textMultiLine" />

        <TextView
            android:id="@+id/ipadresstext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:textSize="20sp"
            android:text="@string/ip_text" />

        <Button
            android:id="@+id/save_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="310sp"
            android:layout_marginTop="650sp"
            android:text="@string/send_data_text" />

    </FrameLayout>
</RelativeLayout>